@@ -4844,14 +4844,14 @@ AND m.meta_value='queued'";
 				$is_condition_enabled = rgar( $new_step_meta, 'feed_condition_conditional_logic' ) == true;
 				$logic                = rgars( $new_step_meta, 'feed_condition_conditional_logic_object/conditionalLogic' );
 				if ( $is_condition_enabled && ! empty( $logic ) ) {
-				    foreach ( $new_step_meta['feed_condition_conditional_logic_object']['conditionalLogic']['rules'] as $key => $rule ) {
-				        if ( strstr( $rule['fieldId'], 'workflow_step_status_' ) ) {
-					        $old_feed_id = explode( '_', $rule['fieldId'] ); // fieldId is in the format of "workflow_step_status_30"
-					        $new_step_meta['feed_condition_conditional_logic_object']['conditionalLogic']['rules'][$key]['fieldId'] = 'workflow_step_status_' . $feed_id_mappings[$old_feed_id[3]];
-					        $step_ids_updated = true;
-                        }
-                    }
-                }
+					foreach ( $new_step_meta['feed_condition_conditional_logic_object']['conditionalLogic']['rules'] as $key => $rule ) {
+						if ( strstr( $rule['fieldId'], 'workflow_step_status_' ) ) {
+							$old_feed_id = explode( '_', $rule['fieldId'] ); // fieldId is in the format of "workflow_step_status_30"
+							$new_step_meta['feed_condition_conditional_logic_object']['conditionalLogic']['rules'][$key]['fieldId'] = 'workflow_step_status_' . $feed_id_mappings[$old_feed_id[3]];
+							$step_ids_updated = true;
+						}
+					}
+				}
 
 				if ( $step_ids_updated ) {
 					$this->update_feed_meta( $new_step->get_id(), $new_step_meta );
